assets/CSS/style.css
*{
    box-sizing: border-box;
    text-align: center;
    margin-left: 10px;
    margin-right:10px;
}
body{
    width: 960px;
    font-family: Arial, Helvetica, sans-serif;
    color: #777;
    background: #777;
    font-size:18px;
}
.container{
    position: relative;
    padding: 20px;
    margin: 0;
    text-align: center;
}
header{
    background: #ebebeb;
}
#catPicture{
    height: 10%;
    width:  10%;
}
.navButton {
    display: block;

    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    float: left;

}
#contentBox{
    width: 960px;
}
nav .navClass{
    background:#ebebeb;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;

}
aside{
    background: #ebebeb;

}
footer{
    background: ebebeb;

}
h1{
    color: #777;
    background: #ebebeb;
}
p{
    
    color: #777;
    background: #ebebeb;
}
section {
    width: 495px;
}
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #ebebeb;
}

li {
    float: right;
}

li a {
    display: block;
    color: #ebebeb;
    text-align: center;
    padding: 16px;
    text-decoration: none;
}

